fix: correct overflow

--- a/src/app/shared/banner/banner.component.scss
+++ b/src/app/shared/banner/banner.component.scss
@@ -53,7 +53,7 @@
     }
 
     img {
-      width: 100vw;
+      width: 100%;
     }
   }
 
